[package]
name = "dinosaurust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = {  version = "2.4.2", features = ["arbitrary", "std"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
random = "0.14.0"
static_init = "1.0.3"
tokio = { version = "1.36.0", features = ["full"] }
